--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Jetdo</title>
+  <style>
+    html, body {
+      width: 100%;
+      height: 100vh;
+      padding: 0;
+      margin: 0;
+    }
+    canvas {
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 </head>
 <body>
-  init
+  <canvas id="canvas"></canvas>
+  <script src="bundle.js"></script>
 </body>
 </html>
