add hot module, add polyfill

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
       height: 100%;
     }
   </style>
+  <script defer src="polyfil.min.js"></script>
+  <script defer src="bundle.js"></script>
 </head>
 <body>
   <canvas id="canvas"></canvas>
-  <script src="bundle.js"></script>
 </body>
 </html>
